--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,14 @@
     "name": "binarta.namespaced.rest.angular",
     "main": "./src/namespaced.rest.js",
     "dependencies": {
-        "angular": "1.2.5",
-        "binarta.rest.client.angular": ">=0.0.2",
-        "binarta.config.angular":"0.0.*"
+        "angular": "1.3.*",
+        "binarta.rest.client.angular": "0.*.*",
+        "binarta.config.angular":"0.*.*"
     },
     "devDependencies": {
-        "angular-mocks": "1.2.5",
-        "thk-rest-client-mock":">=0.0.4",
-        "thk-config-mock":"0.0.*"
+        "angular-mocks": "1.3.*",
+        "thk-rest-client-mock":"0.*.*",
+        "thk-config-mock":"0.*.*"
     },
     "ignore": [
         "**/.*",
