--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,24 @@
 {
-    "name": "binarta.namespaced.rest.angular",
-    "main": "./src/namespaced.rest.js",
-    "dependencies": {
-        "angular": "1.3.*",
-        "binarta.rest.client.angular": "0.*.*",
-        "binarta.config.angular":"0.*.*"
-    },
-    "devDependencies": {
-        "angular-mocks": "1.3.*",
-        "thk-rest-client-mock":"0.*.*",
-        "thk-config-mock":"0.*.*"
-    },
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ]
+  "name": "binarta.namespaced.rest.angular",
+  "main": [
+    "./src/namespaced.rest.js",
+    "./sources.json"
+  ],
+  "dependencies": {
+    "binarta.angularx": "0.*.*",
+    "binarta.rest.client.angular": "0.*.*",
+    "binarta.config.angular": "0.*.*"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.*.*",
+    "thk-rest-client-mock": "0.*.*",
+    "thk-config-mock": "0.*.*"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
